--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Piyush Mirajkar</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi qui labore nesciunt corporis? Voluptate ab veritatis eligendi sequi, molestias maxime aperiam quae minus laboriosam atque, ipsa perspiciatis? Perspiciatis, minus maxime.</p>
 </body>
 </html>
