--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pm</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>Piyush Mirajkar</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi qui labore nesciunt corporis? Voluptate ab veritatis eligendi sequi, molestias maxime aperiam quae minus laboriosam atque, ipsa perspiciatis? Perspiciatis, minus maxime.</p>
+    <div class="navbar">
+        <span>
+            <a href="index.html">Piyush</a>
+        </span>
+
+        <span>
+            <a href="">Home</a>
+            <a href="">About</a>
+            <a href="">Skills</a>
+            <a href="">Works</a>
+            <a href="">Contact</a>
+        </span>
+    </div>
 </body>
 </html>
